2005-02-16  Ryan Lortie  <desrt@desrt.ca>

	* modules/http-proxy.c (parse_ignore_host): Fix for unused variable
	'gint i' when ENABLE_IPV6 is undefined.

2005-02-16  Nate Nielsen <nielsen@memberwebs.com>
	
	* modules/smb-method.c (prompt_authentication): Allow user name 
	and domain in prompt dialog even when no URI is in context.
	* modules/smb-method.c (perform_authentication, get_cached_server):
	Don't reauthenticate for access errors on established connections.

2005-02-16  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-async-ops.c:
	Document how cancellation works (eh, doesn't work) in
	multithreaded applications-
	
	* libgnomevfs/gnome-vfs-cancellation.c:
	(gnome_vfs_cancellation_cancel):
	Remove main thread assert.

2005-02-14  Christian Kellner  <gicmo@gnome.org>

	* modules/ftp-method.c (unix_ls_to_file_info): Unset the invaild
	fields instead of setting everthing except those fields. This
	should also fix bug #167268.

2005-02-14  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-socket.c: Make read and write calls aware
	of cancellation. This should fix bug #151380.

2005-02-11  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-xfer.c (gnome_vfs_xfer_delete_items_common):
	Plug some more leaks. This fixes bug #166109.

2005-02-11  Christian Kellner  <gicmo@gnome.org>

	* modules/sftp-method.c: Plug some leaks. This should fix 
	bug #153264.

2005-02-11  Nate Nielsen  <nielsen@memberwebs.com>

	* modules/smb-method.c (lookup_user_cache): Fix crash when user 
	name specified in smb URI. See bug #167075. 
	Thanks Narayana Pattipati <narayana.pattipati@wipro.com>
	* modules/smb-method.c: Fix server cache access for IPC$ shares.
	* modules/smb-method.c: Allow authentication with an empty password.
	* modules/smb-method.c: Try 'guest' login instead of blank for 
	compatibility with certain SMB configurations.
	
2005-02-11  Christian Kellner  <gicmo@gnome.org>

	* test/test-uri.c: Replaced old obsolete uri